# ensembl-variation-pipelines

./: .gitignore  NOTICE  README.md  ruff.toml
.github/scripts/: nftest_coverage_comment.sh  post_coverage_comment.sh  py_coverage_comment.sh
datachecks/: conftest.py  helper.py  run_datachecks.py  test_bigbed.py  test_bigwig.py  test_vcf.py
docs/: about.md  index.md
nextflow/: Makefile
scripts/: auto_create_input_config.py  calculate_frequency_from_gt.py  create_hprc_segdup_tracks.py  create_input_config.py  create_metadata_payload.py  create_track_api_metadata.py  merge_region_call.py  population_to_haplotype.py  preprocess_hgsvc3.py  test_handover.py  test_track_api_endpoint.py  update_variant_id.py
src/python/: README.md  pyproject.toml  test.vcf
src/python/ensembl/scripts/: remove_duplicate_ids.py
src/python/ensembl/variation_utils/: file_utils.py
src/python/ensembl/variation_utils/clients/: clients.py  core.py  metadata.py
src/python/ensembl/variation_utils/file_locator/: fasta.py  file_locator.py  ftp.py  gff.py  utils.py  vep_cache.py
src/python/ensembl/variation_utils/vep_config/: custom_annotation.py  genome_matcher.py  plugin.py
src/python/tests/: backup.py  test.py
src/python/tests/variation_utils/: conftest.py  test_file_utils.py
src/python/tests/variation_utils/clients/: test_clients.py  test_core.py  test_metadata.py
src/python/tests/variation_utils/data/: db_config.ini  ensembl_genome_metadata.dump  homo_sapiens_core_110_38.dump  test.vcf.bgz
src/python/tests/variation_utils/data/ensembl_repos/VEP_plugins/: plugin_config.txt
src/python/tests/variation_utils/file_locator/: test_fasta.py  test_file_locator.py  test_ftp.py  test_gff.py  test_vep_cache.py
src/python/tests/variation_utils/vep_config/: test_plugin.py
(+241 files in other folders)
