# See the NOTICE file distributed with this work for additional information
# regarding copyright ownership.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "ensembl-variation-utils"
description = "Ensembl Variation Pipeline"
requires-python = ">= 3.9"
version = "0.0.1"
readme = "README.md"
authors = [
    {name = "Syed Nakib Hossain", email = "snhossain@ebi.ac.uk"},
]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = [
    "ensembl",
    "bioinformatics",
    "pipeline",
    "variation",
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
	"Deprecated >= 1.2.18",
    "mkdocs >= 1.6.1"
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
include = [
  "ensembl/variation_utils/**"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = []

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true